@@ -1413,6 +1413,15 @@ namespace libtorrent
 			// selected by the client. See enc_level enum for options.
 			allowed_enc_level,
 
+			// the download and upload rate limits for a torrent to be considered
+			// active by the queuing mechanism. A torrent whose download rate is less
+			// than ``inactive_down_rate`` and whose upload rate is less than
+			// ``inactive_up_rate`` for ``auto_manage_startup`` seconds, is
+			// considered inactive, and another queued torrent may be startert.
+			// This logic is disabled if ``dont_count_slow_torrents`` is false.
+			inactive_down_rate,
+			inactive_up_rate,
+
 			max_int_setting_internal,
 			num_int_settings = max_int_setting_internal - int_type_base
 		};
